--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ a {
     position: relative;
     user-select: none;
     margin-bottom: var(--main-padding);
+    z-index: 1;
 }
 
 .main-heading::before,
@@ -516,3 +517,77 @@ header .arrow:hover {
 }
 
 /************************ End Style Aritecles ***********************/
+
+/************************ Start Style Gallery **********************/
+
+.gallery {
+    --gallery-transtion: .7s;
+    padding-top: var(--main-padding);
+    padding-bottom: var(--main-padding);
+    background-color: var(--background);
+}
+
+.gallery .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 40px;
+}
+
+.gallery .cards .card {
+    padding: 15px;
+    background-color: white;
+    box-shadow: 0 0 20px rgb(0 0 0 / .4);
+    cursor: pointer;
+    transition: var(--gallery-transtion);
+}
+
+.gallery .cards .card:hover {
+    box-shadow: 0 0 30px rgb(0 0 0 / .6);
+}
+
+.gallery .card:hover .image::before {
+    animation: flashing var(--gallery-transtion);
+}
+
+.gallery .card:hover img {
+    transform: rotate(6deg) scale(1.2);
+}
+
+.gallery .card .image {
+    position: relative;
+    overflow: hidden;
+}
+
+.gallery .card .image::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(250 250 250 / .2);
+    z-index: 1;
+    width: 0;
+    height: 0;
+}
+
+.gallery .card img {
+    max-width: 100%;
+    position: relative;
+    transition: var(--gallery-transtion);
+}
+
+/*******   Anmaition   ********/
+
+@keyframes flashing {
+    0%, 20% {
+        width: 0;
+        height: 0;
+    }
+
+    100% {
+        width: 200%;
+        height: 200%;
+    }
+}
+
+/************************ End Style Gallery ***********************/
