--- a/css/style.css
+++ b/css/style.css
@@ -897,26 +897,21 @@ header .arrow:hover {
     box-shadow: 0 0 15px rgb(0 0 0 / .3);
 }
 
-.services .cards .service:hover::before,
-.services .cards .service:hover::after {
-    width: 50%;
+.services .cards .service:hover::before {
+    width: 100%;
 }
 
-.services .cards .service::before,
-.services .cards .service::after {
+.services .cards .service::before {
     content: "";
     width: 0;
     height: 3px;
     background-color: #2196f3;
     position: absolute;
     top: 0;
-    transform: translateX(-50);
+    left: 50%;
+    transform: translateX(-50%);
     transition: var(--main-transition)
 }
-
-.services .cards .service::before {left: 50%}
-
-.services .cards .service::after {right: 50%}
 
 .services .service .title {
     padding: 30px 0;
@@ -942,17 +937,6 @@ header .arrow:hover {
 }
 
 .services .service .footer::before {
-    content: "";
-    width: 35%;
-    height: 100%;
-    background-color: #d5d5d5;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: skewX(-20deg) translateX(-10px)
-}
-
-.services .service .footer::after {
     content: "0" counter(number);
     font-size: 28px;
     font-weight: bold;
@@ -963,10 +947,21 @@ header .arrow:hover {
     width: 25%;
     height: 100%;
     background-color: var(--main-color);
+    padding-right: 5%;
     position: absolute;
     top: 0;
     left: 0;
-    transform: skewX(-20deg) translateX(-10px)
+}
+
+.services .service .footer::after {
+    content: "";
+    width: 10%;
+    height: 100%;
+    background-color: #d5d5d5;
+    position: absolute;
+    top: 0;
+    left: 25%;
+    transform: skewX(-20deg)
 }
 
 .services .service .footer a {
