--- a/css/style.css
+++ b/css/style.css
@@ -1033,7 +1033,96 @@ header .arrow:hover {
 
 /********************* End Style skills ********************/
 
+/********************* Start Style It Works ********************/
 
+.it-works {
+    padding-top: var(--main-padding);
+    padding-bottom: var(--main-padding);
+    background-color: var(--background);
+}
+
+.it-works .content {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+.it-works .content > * {
+    width: 50%;
+}
+
+.it-works .content .image img {max-width: 100%;}
+
+.it-works .content .works {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.it-works .works .card {
+    display: flex;
+    align-items: center;
+    gap: 35px;
+    background-color: #f4f2f2;
+    border: 2px solid white;
+    cursor: pointer;
+    padding: 35px;
+    box-shadow: 0 0 15px rgb(0 0 0 / .2);
+    position: relative;
+    z-index: 1;
+}
+
+.it-works .works .card::before {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--background);
+    z-index: -1;
+    transition: var(--main-transition)
+}
+
+.it-works .works .card:hover::before {
+    width: 100%;
+    height: 100%;
+}
+
+.it-works .works .card h3 {
+    text-transform: capitalize;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.it-works .works .card p {
+    line-height: 1.6;
+    color: var(--text-color)
+}
+
+.it-works .card img {width:70px}
+
+/* Media Quires */
+
+@media (max-width: 991px) {
+    .it-works .content {
+        flex-direction: column;
+    }
+
+    .it-works .content > * {
+        width: 100%;
+    }
+}
+
+@media (max-width: 767px) {
+    .it-works .works .card {
+        flex-direction: column;
+        text-align: center;
+    }
+}
+
+/********************* End Style It Works ********************/
 
 
 
