--- a/css/style.css
+++ b/css/style.css
@@ -1068,6 +1068,7 @@ header .arrow:hover {
     cursor: pointer;
     padding: 35px;
     box-shadow: 0 0 15px rgb(0 0 0 / .2);
+    border-radius: var(--radues);
     position: relative;
     z-index: 1;
 }
@@ -1139,34 +1140,34 @@ header .arrow:hover {
 
 
 
-/********************* Start Style section footer ********************/
+/********************* Start Style footer ********************/
 
-.footer {
+body > footer {
     padding-top: var(--main-padding);
-    padding-bottom: var(--main-padding);
     background-color: #191919;
     color: #999;
 }
 
-.footer .container {
+body > footer .container {
+    padding-bottom: calc(var(--main-padding) / 2);
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: var(--gap-cards);
 }
 
-.footer .info h2 {
+body > footer .info h2 {
     text-transform: capitalize;
     color: white;
     font-size: 34px;
 }
 
-.footer .info .icon {
+body > footer .info .icon {
     margin: 20px 0;
     display: flex;
     gap: 15px;
 }
 
-.footer .info .icon a {
+body > footer .info .icon a {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1178,32 +1179,32 @@ header .arrow:hover {
     color: #b9b9b9
 }
 
-.footer .info .icon a:hover {
+body > footer .info .icon a:hover {
     background-color: var(--main-color);
     color: white;
 }
 
-.footer .info p {
+body > footer .info p {
     line-height: 1.6;
 }
 
-.footer .links li:not(:last-of-type) {
+body > footer .links li:not(:last-of-type) {
     border-bottom: 2px solid #313131;
 }
 
-.footer .links a {
+body > footer .links a {
     display: block;
     padding: 15px 0;
     position: relative;
     transition: var(--main-transition);
 }
 
-.footer .links a:hover {
+body > footer .links a:hover {
     transform: translateX(15px);
     color: white
 }
 
-.footer .links a::before {
+body > footer .links a::before {
     content: "\F101";
     font-family: "Font Awesome 5 Free";
     font-weight: bold;
@@ -1211,23 +1212,23 @@ header .arrow:hover {
     color: var(--main-color)
 }
 
-.footer .address article {
+body > footer .address article {
     display: flex;
     align-items: center;
     margin-bottom: 25px;
 }
 
-.footer .address i {
+body > footer .address i {
     font-size: 26px;
     margin-right: 15px;
     color: var(--main-color)
 }
 
-.footer .address p {
+body > footer .address p {
     line-height: 1.6;
 }
 
-.footer .projects {
+body > footer .projects {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -1235,38 +1236,36 @@ header .arrow:hover {
     gap: 5px;
 }
 
-.footer .projects img {
+body > footer .projects img {
     width: 80px;
     height: 80px;
     border: 3px solid white
 }
 
 @media (max-width: 767px) {
-    .footer .container {
+    body > footer .container {
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
     }
 
-    .footer .info .icon {
+    body > footer .info .icon {
         justify-content: center;
     }
 
-    .footer .links a {
+    body > footer .links a {
         min-width: 300px;
     }
 
-    .footer .address article {
+    body > footer .address article {
         flex-direction: column;
         gap: 15px;
     }
 }
-/********************* End Style section footer  ********************/
 
-/********************* Start Style footer  ********************/
-
-body > footer {
+/* foorer copy right */
+body > footer .copy-right {
     padding: 30px 15px;
     background-color: #191919;
     text-align: center;
@@ -1277,13 +1276,13 @@ body > footer {
     font-size: 18px;
 }
 
-body > footer a {
+body > footer .copy-right a {
     color: white;
     font-weight: bold;
     text-transform: uppercase;
     transition: var(--main-transition);
 }
 
-body > footer a:hover {color: var(--main-color)}
+body > footer .copy-right a:hover {color: var(--main-color)}
 
 /********************* End Style footer  ********************/
